// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewImage renders a fallback image 1`] = `
<img
  alt="Item title"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop 1`] = `
<img
  alt="Alt prop"
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop empty 1`] = `
<img
  alt=""
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a preview image 1`] = `
<img
  alt="Item title"
  className=""
  fetchpriority="high"
  height={400}
  src="http://localhost:3000/something/@@images/image"
  srcSet="http://localhost:3000/something/@@images/image-400.png 400w"
  style={
    Object {
      "aspectRatio": "400 / 400",
    }
  }
  width={400}
/>
`;

exports[`PreviewImage renders a preview image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  fetchpriority="high"
  height={400}
  src="http://localhost:3000/something/@@images/image"
  srcSet="http://localhost:3000/something/@@images/image-400.png 400w"
  style={
    Object {
      "aspectRatio": "400 / 400",
    }
  }
  width={400}
/>
`;
